# archivist

./: .dockerignore  .env.example  .env.local.example  AGENTS.md  CONCEPT.md  Caddyfile.local  LICENSE  PROMPT.md  README.md  REVIEW.md  docker-compose.local.yaml  docker-compose.prod.env.example  docker-compose.prod.yaml  docker-compose.yaml  gateway.Dockerfile  go.mod  lefthook.yml  otelcol-config.yaml  rp.Caddyfile  snapshotter.Dockerfile  ui.Caddyfile  ui.Dockerfile  worker.Dockerfile
.agents/agents/: coordinator.md  frontend-reviewer.md  frontend-worker.md  gateway-reviewer.md  gateway-worker.md  go-developer-agent.md  merger.md  worker-reviewer.md  worker-worker.md
.claude/: settings.json
.github/workflows/: cd.yml  ci.yml
docs/: ARCHITECTURE.md  ARTIFACTS.md  BOOKKEEPING.md  CONVENTIONS.md  DESIGN.md  ERRORS.md  MASTERPLAN.md  REBUILD.md
docs/conventions/: ARTIFACTS.md  ERRORS.md  GATEWAY.md  GENERAL.md  UI.md  WORKER.md
docs/design/: DESIGN.md
docs/specs/: INDEX.md
docs/templates/: DIARY.md  EXECPLAN.md  PLAN.md  SPEC.md  TASK.md
scripts/: create-draft-release.sh  package-compose-release.sh
src/gateway/: .editorconfig  .gitignore  Archivist.Gateway.slnx
src/snapshotter/: .gitignore  README.md  pyproject.toml
src/snapshotter/src/archivist_snapshotter/: archive.py  cli.py  config.py  daemon.py  logging.py  telemetry.py  upload.py
src/snapshotter/tests/: __init__.py  helpers.py  test_archive.py  test_config.py  test_daemon.py  test_logging.py  test_telemetry.py  test_upload.py
src/ui/: .env.example  biome.json  index.html  package-lock.json  (+4 more)
(+388 files in other folders)
