[project]
name = "archivist-snapshotter"
version = "0.1.0"
description = "Archivist periodic data snapshot uploader"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a21",
]

[project.scripts]
archivist-snapshotter = "archivist_snapshotter.cli:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "SIM", "RUF"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.12"
root = ["./src", "."]
